package com.efacility.ticketing.model.enums;

public enum Prioritet {
    LOW,
    MEDIUM,
    HIGH,
    URGENT
}
