package com.efacility.ticketing.model.enums;

public enum StatusTiketa {
    OPEN,
    ASSIGNED,
    IN_PROGRESS,
    COMPLETED,
    CLOSED
}
