@startuml
skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide circle
top to bottom direction

class building {
  id: Long
  name: String
  address: String
}

class apartment {
  id: Long
  number: String
  floor: int
}

class users {
  id: Long
  firstName: String
  lastName: String
  email: String
  password: String
  role: Uloga
}

class ticket {
  id: Long
  title: String
  description: String
  status: StatusTiketa
  priority: Prioritet
  createdAt: LocalDateTime
  updatedAt: LocalDateTime
}

class comment {
  id: Long
  message: String
  createdAt: LocalDateTime
}

class ticket_history {
  id: Long
  oldStatus: StatusTiketa
  newStatus: StatusTiketa
  changedAt: LocalDateTime
}

enum Uloga <<enumeration>> {
  TENANT
  MANAGER
  TECHNICIAN
}

enum StatusTiketa <<enumeration>> {
  OPEN
  ASSIGNED
  IN_PROGRESS
  COMPLETED
  CLOSED
}

enum Prioritet <<enumeration>> {
  LOW
  MEDIUM
  HIGH
  URGENT
}

building "1" -- "0..*" apartment
apartment "1" -- "0..*" ticket
users "1" -- "0..*" ticket
users "1" -- "0..*" comment
users "1" -- "0..*" ticket_history
ticket "1" -- "0..*" comment
ticket "1" *-- "0..*" ticket_history

users ..> Uloga
ticket ..> StatusTiketa
ticket ..> Prioritet
ticket_history ..> StatusTiketa
@enduml
